WLNP-12274: BSJ: prepare the implementation for Document ingestion
add patching feature